--- a/src/Components/Landpage/landpage.css
+++ b/src/Components/Landpage/landpage.css
@@ -93,21 +93,23 @@ a.active, a:hover{
 
 
 .all-container {
+    width:80%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    padding-right:2rem;
   }
   .thumb-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 1.5rem 0 ;
+    padding: 1.5rem 2rem ;
     margin: 1rem;
     border: 1px solid #efefef;
     border-radius: 0.2rem;
-    min-width: 300px;
+    width: 80%;
     text-align: center;
     box-shadow: 0 3px 15px rgba(0, 0, 0, 0.089);
   }
@@ -140,4 +142,10 @@ a.active, a:hover{
     border-radius: 0.2rem;
     cursor: pointer;
     background-color: rgba(0, 0, 0, 0.185);
+  }
+
+  @media (max-width:575px) {
+    .input{
+      width:80%
+    }
   }
